use java21 features